# MessageSearchApp

./: .gitignore  README.md  pyproject.toml
notebooks/: main.ipynb
notebooks/.ipynb_checkpoints/: main-checkpoint.ipynb
src/: db_utilities.py  document_utilities.py
tests/: __init__.py  test_document_utilities.py
