[project]
name = "messagesearchapp"
version = "0.1.0"
description = "Message RAG app"
authors = [
    {name = "Chris Claude",email = "christ.tchambila@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langgraph (>=0.5.2,<0.6.0)",
    "langchain[google-genai] (>=0.3.26,<0.4.0)",
    "langchain-google-genai (>=2.1.7,<3.0.0)",
    "unstructured[pdf] (>=0.18.5,<0.19.0)",
    "langchain-unstructured (>=0.1.6,<0.2.0)",
    "langchain-mongodb (>=0.6.2,<0.7.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
jupyterlab = "^4.4.4"

